src/test/deca/context/valid/provided/somme_int.deca
/*/ Description:
//    Programme faisant correctement l'incrémentation.
//
// Resultats: 4
//
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
	x = x+1;
	println(x);
}
